--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nipunx1999/perspective-viewer-boxplot",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "A seaborn-style boxplot plugin for FINOS Perspective with hover tooltips and multi-metric support",
   "main": "dist/perspective-viewer-boxplot.js",
   "module": "dist/perspective-viewer-boxplot.esm.js",
@@ -15,10 +15,12 @@
   "keywords": ["perspective", "boxplot", "seaborn", "visualization", "statistics", "finos", "react", "d3", "chart"],
   "author": "Nipun <nipunx1999@protonmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "d3": "^7.8.5"
+  },
   "peerDependencies": {
     "@finos/perspective": ">=3.0.0",
-    "@finos/perspective-viewer": ">=3.0.0",
-    "d3": ">=7.0.0"
+    "@finos/perspective-viewer": ">=3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
